# othello

./: .gitignore  Cargo.toml  LICENSE  README.md  coef.json  main.rs
src/: MCTS.md  board.rs  lib.rs  main.rs  mcts.rs  mcts_rave.rs  minimax.rs  player.rs  rules.rs  scraper.rs  strategie.rs
