[package]
name = "othello"
version = "0.0.1"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
rand = {version="0.8.5",features=["std_rng"]}
crossterm = "0.26.1"
tokio = {version="1.27.0",features = ["full"]}
rayon = "1.7.0"
headless_chrome = "1.0.5"
failure = "0.1.8"
anyhow = "1.0.71"
serde_json = "1.0.64"
serde = {version="1.0.130",features = ["derive"]}
