[package]
name = "othello"
version = "0.0.1"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
rand = {version="0.8.5",features=["std_rng"]}
crossterm = "0.27.0"
tokio = {version="1.27.0",features = ["full"]}
rayon = "1.7.0"
anyhow = "1.0.71"
serde_json = "1.0.64"
serde = {version="1.0.130",features = ["derive"]}
futures = "0.3.28"
fxhash = "0.2.1"
